name:                twitch-hs
version:             0.1.0.0
author:              Globicodeur
maintainer:          guillaume.depardon@outlook.com
build-type:          Simple
cabal-version:       >=1.10

executable twitch-hs
  main-is:             Main.hs
  other-modules:
    Irc.Client
    Irc.Parser
    Irc.Twitch
  -- other-extensions:
  build-depends:       base,
                       network,
                       parsec,
                       hint
  -- hs-source-dirs:
  default-language:    Haskell2010
